deploy/envs/prod/patches/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: promptyard-server
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: server
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
