deploy/envs/prod/patches/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: promptyard-server
spec:
  rules:
    - host: staging.app.example.com
